IF (NOT QT_USE_FILE)
	CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
	IF (COMMAND cmake_policy)
		cmake_policy (SET CMP0003 NEW)
	ENDIF (COMMAND cmake_policy)

	PROJECT (leechcraft_choroid)

	IF (NOT CMAKE_MODULE_PATH)
		SET (CMAKE_MODULE_PATH "/usr/local/share/leechcraft/cmake;/usr/share/leechcraft/cmake")
	ENDIF (NOT CMAKE_MODULE_PATH)

	FIND_PACKAGE (Qt4 REQUIRED)
	FIND_PACKAGE (LeechCraft REQUIRED)
ENDIF (NOT QT_USE_FILE)

SET (QT_USE_QTDECLARATIVE TRUE)
INCLUDE (${QT_USE_FILE})
INCLUDE_DIRECTORIES (
	${CMAKE_CURRENT_BINARY_DIR}
	${LEECHCRAFT_INCLUDE_DIR}
	)
SET (SRCS
	choroid.cpp
	choroidtab.cpp
	)
SET (HEADERS
	choroid.h
	choroidtab.h
	)
SET (FORMS
	choroidtab.ui
	)
#SET (TRANSLATIONS
#	leechcraft_choroid_ru_RU.ts
#	leechcraft_choroid_en.ts
#	)
#SET (COMPILED_TRANSLATIONS
#	${CMAKE_CURRENT_SOURCE_DIR}/leechcraft_choroid_ru_RU.qm
#	${CMAKE_CURRENT_SOURCE_DIR}/leechcraft_choroid_en.qm
#	)
IF (NOT LC_NO_MOC)
	QT4_WRAP_CPP (MOC_SRCS ${HEADERS})
ENDIF (NOT LC_NO_MOC)
QT4_WRAP_UI (UIS_H ${FORMS})

#ADD_CUSTOM_COMMAND (OUTPUT
#	${COMPILED_TRANSLATIONS}
#	COMMAND "${QT_LRELEASE_EXECUTABLE}" ${TRANSLATIONS}
#	DEPENDS ${TRANSLATIONS}
#	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
#	)
ADD_LIBRARY (leechcraft_choroid SHARED
#	${COMPILED_TRANSLATIONS}
	${SRCS}
	${MOC_SRCS}
	${UIS_H}
	)
TARGET_LINK_LIBRARIES (leechcraft_choroid
	${QT_LIBRARIES}
	${LEECHCRAFT_LIBRARIES}
	)
INSTALL (TARGETS leechcraft_choroid DESTINATION ${LC_PLUGINS_DEST})
INSTALL (FILES ${COMPILED_TRANSLATIONS} DESTINATION ${LC_TRANSLATIONS_DEST})
INSTALL (DIRECTORY share/qml/choroid DESTINATION ${LC_QML_DEST})
